2010-04-16  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp: use RT:REM-TEST to disable CHAR-INT.2
	instead of redefining a function

2010-04-15  Sam Steingold  <sds@gnu.org>

	fix bug #2986052: mt/readline: terminal is left raw on crash
	* spvw.d (fini_lowest_level) [GNU_READLINE]: call
	rl_deprep_term_function to restore the terminal state
	(signal_handler_thread): call fini_lowest_level

2010-04-15  Vladimir Tzankov  <vtzankov@gmail.com>

	fix bug#2987732: mt: clisp hangs repeating sched_yield()
	* stream.d (begin_rl_callback, end_rl_callback): define and use instead
	of begin_callback() and end_callback() in readline callbacks

2010-04-15  Sam Steingold  <sds@gnu.org>

	* query.lisp (y-or-n-p, yes-or-no-p): call (FORCE-OUTPUT *QUERY-IO*)
	after every output to *QUERY-IO*

2010-04-14  Sam Steingold  <sds@gnu.org>

	* clhs.lisp: set package/impnotes documentation for package THREADS

2010-04-13  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw.d (fill_terminating_signals_mask): add terminating signals to
	sigset_t mask
	(async_signal_mask): unblock terminating signals if the process is
	exiting due to such signal
	(signal_wait): ignore signals not set in the mask passed to sigwait()
	(signal_handler_thread) [UNIX_MACOSX]: do not ignore SIGHUP

2010-04-13  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	Fix for a bug#1481218 with default drive directory:
	within CLISP default_directory_of() is used to fill missed
	pathname directory component in pathnames like C:lisp.exe.
	This functionality now added to real_path as well to
	support lisp invocation like 'C:\>e:lisp.exe -M e:lispinit.mem'.
	* w32shell.c (real_path): detect and handle default drive
	directory references. Optimization: less use of strlen.

2010-04-12  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_sigterm.d (quit_on_signal_in_progress): move to spvw.d
	* spvw.d (quit_on_signal_in_progress): define it here
	(async_signal_mask) [POSIX_THREADS]: do not add terminating signals if